# DocAssist

./: .gitignore  README.md  pdf_parser.py  pyproject.toml  server.py  speech_to_text.py  vector_database.py
