[project]
name = "docassist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.4.0",
    "faster-whisper>=1.2.1",
    "flask>=3.1.2",
    "numpy>=2.2.6",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
    "sounddevice>=0.5.3",
    "tqdm>=4.67.1",
]
